{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 16,
  "lineage": "c9c3d144-918b-476a-1a5f-62ab2a3e58df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ABRICOT-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0514e24c1a0617820",
            "domain": "vpc",
            "id": "eipalloc-0514e24c1a0617820",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-15-237-134-154.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.237.134.154",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ABRICOT-INSTANCE1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0a67454bf9869c48e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a67454bf9869c48e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b6e817e56cf62629",
            "private_dns": "ip-10-0-1-253.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.253",
            "public_ip": "13.36.233.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5aa9fe388555cd3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0a48f91e7f5221059"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0448c3ad9ded44da4",
            "tags": {
              "Name": "ABRICOT-INSTANCE1"
            },
            "tags_all": {
              "Name": "ABRICOT-INSTANCE1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a48f91e7f5221059"
            ]
          },
          "dependencies": [
            "aws_instance.ABRICOT-INSTANCE2",
            "aws_security_group.ABRICOT-SG1",
            "aws_security_group.ABRICOT-SG2",
            "aws_subnet.ABRICOT-SUBNET1",
            "aws_subnet.ABRICOT-SUBNET2",
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ABRICOT-INSTANCE2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f61de2873e29e866",
            "arn": "arn:aws:ec2:eu-west-3:962615889483:instance/i-0d07556b6263bf737",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d07556b6263bf737",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "TSIEUDAT-KEYSSH",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fa8e8f0d963520c4",
            "private_dns": "ip-10-0-2-32.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06aefdffff3b3a2b0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b933a0b1c80bb00b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d772781db466b554",
            "tags": {
              "Name": "ABRICOT-INSTANCE2"
            },
            "tags_all": {
              "Name": "ABRICOT-INSTANCE2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b933a0b1c80bb00b"
            ]
          },
          "dependencies": [
            "aws_security_group.ABRICOT-SG1",
            "aws_security_group.ABRICOT-SG2",
            "aws_subnet.ABRICOT-SUBNET2",
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ABRICOT-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:internet-gateway/igw-0628854117a9c7bbf",
            "id": "igw-0628854117a9c7bbf",
            "owner_id": "962615889483"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ABRICOT-NAT-GTW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0514e24c1a0617820",
            "association_id": "eipassoc-098359ea8ee766c7f",
            "connectivity_type": "public",
            "id": "nat-0290caf261821c6c0",
            "network_interface_id": "eni-07920c852a023502d",
            "private_ip": "10.0.1.213",
            "public_ip": "15.237.134.154",
            "subnet_id": "subnet-0448c3ad9ded44da4",
            "tags": {
              "Name": "ABRICOT-NAT-GTW"
            },
            "tags_all": {
              "Name": "ABRICOT-NAT-GTW"
            }
          },
          "dependencies": [
            "aws_eip.ABRICOT-EIP",
            "aws_internet_gateway.ABRICOT-IGW",
            "aws_subnet.ABRICOT-SUBNET1",
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ABRICOT-ROUTE-DEFAULT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0628854117a9c7bbf",
            "id": "r-rtb-0451c32022d1d583d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0451c32022d1d583d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ABRICOT-IGW",
            "aws_internet_gateway_attachment.ABRICOT-IGW-ATTACHMENT",
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ABRICOT-ROUTE1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0580a3482669e35f4",
            "id": "rtb-0580a3482669e35f4",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0628854117a9c7bbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ABRICOT-ROUTE1"
            },
            "tags_all": {
              "Name": "ABRICOT-ROUTE1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3027195434f9367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ABRICOT-IGW",
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ABRICOT-ROUTE2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:route-table/rtb-0a279d065f4fd6fc6",
            "id": "rtb-0a279d065f4fd6fc6",
            "owner_id": "962615889483",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0290caf261821c6c0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ABRICOT-ROUTE2"
            },
            "tags_all": {
              "Name": "ABRICOT-ROUTE2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3027195434f9367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ABRICOT-EIP",
            "aws_internet_gateway.ABRICOT-IGW",
            "aws_nat_gateway.ABRICOT-NAT-GTW",
            "aws_subnet.ABRICOT-SUBNET1",
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ABRICOT-RTB-ASSOC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052864573593d4bc8",
            "route_table_id": "rtb-0a279d065f4fd6fc6",
            "subnet_id": "subnet-0d772781db466b554"
          },
          "dependencies": [
            "aws_eip.ABRICOT-EIP",
            "aws_internet_gateway.ABRICOT-IGW",
            "aws_nat_gateway.ABRICOT-NAT-GTW",
            "aws_route_table.ABRICOT-ROUTE2",
            "aws_subnet.ABRICOT-SUBNET1",
            "aws_subnet.ABRICOT-SUBNET2",
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ABRICOT-SG1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0a48f91e7f5221059",
            "description": "ABRICOT-SG1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a48f91e7f5221059",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ABRICOT-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ABRICOT-SG1-ALLOW-SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ABRICOT-SG1",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ABRICOT-SG1"
            },
            "tags_all": {
              "Name": "ABRICOT-SG1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3027195434f9367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ABRICOT-SG2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:security-group/sg-0b933a0b1c80bb00b",
            "description": "ABRICOT-SG2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b933a0b1c80bb00b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a48f91e7f5221059"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "ABRICOT-SG-ALLOW-WEB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a48f91e7f5221059"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ABRICOT-SG2",
            "name_prefix": "",
            "owner_id": "962615889483",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ABRICOT-SG2"
            },
            "tags_all": {
              "Name": "ABRICOT-SG2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e3027195434f9367"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ABRICOT-SG1",
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ABRICOT-SUBNET1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0448c3ad9ded44da4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0448c3ad9ded44da4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ABRICOT-SUBNET1"
            },
            "tags_all": {
              "Name": "ABRICOT-SUBNET1"
            },
            "vpc_id": "vpc-0e3027195434f9367"
          },
          "dependencies": [
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ABRICOT-SUBNET2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:subnet/subnet-0d772781db466b554",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d772781db466b554",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "962615889483",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ABRICOT-SUBNET2"
            },
            "tags_all": {
              "Name": "ABRICOT-SUBNET2"
            },
            "vpc_id": "vpc-0e3027195434f9367"
          },
          "dependencies": [
            "aws_vpc.ABRICOT-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ABRICOT-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:962615889483:vpc/vpc-0e3027195434f9367",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04fe20a4272986cd3",
            "default_route_table_id": "rtb-0451c32022d1d583d",
            "default_security_group_id": "sg-0a47ff2dc016ce752",
            "dhcp_options_id": "dopt-040e3fc8fa1640715",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e3027195434f9367",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0451c32022d1d583d",
            "owner_id": "962615889483",
            "tags": {
              "Name": "ABRICOT-VPC"
            },
            "tags_all": {
              "Name": "ABRICOT-VPC"
            }
          }
        }
      ]
    }
  ]
}